# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  19 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/snapshot.py,
  modules/catalyst/target/stage1.py, modules/catalyst/target/stage2.py,
  modules/catalyst/target/stage3.py, modules/catalyst/target/stage4.py,
  modules/catalyst/target/system.py, modules/catalyst/target/tinderbox.py:
  Add dependency information for each target
  Add function to automatically calculate source_subpath

  18 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Fix typo for Gentoo bug #285484

  14 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Rewrite unpack_snapshot() to suck less

  14 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Rewrite unpack() so it doesn't suck

  14 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic.py:
  Beef up autoresume to record path metadata and check it later

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py:
  Add --exclude /packages/ to the rsync line for the snapshot

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
  Create catalyst.util.move() helper and use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/util.py:
  Add catalyst.util.copy() helper function and use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>