@@ -49,8 +49,6 @@ hash_function="crc32"
 # icecream = enables icecream compiler cluster support for building
 # kerncache = keeps a tbz2 of your built kernel and modules (useful if your
 #	build stops in livecd-stage2)
-# metadata_overlay = enabled the metadata_overlay cache module in portage, which
-#	uses the in-tree metadata
 # pkgcache = keeps a tbz2 of every built package (useful if your build stops
 #	prematurely)
 # seedcache = use the build output of a previous target if it exists to speed up
@@ -60,7 +58,7 @@ hash_function="crc32"
 #	your cache. The cache is unlinked before any empty or rm processing, though.
 #
 # (These options can be used together)
-options="autoresume kerncache metadata_overlay pkgcache seedcache snapcache"
+options="autoresume kerncache pkgcache seedcache snapcache"
 
 # portdir specifies the source portage tree used by the snapshot target.
 portdir="/usr/portage"
