@@ -3,6 +3,11 @@
 # Distributed under the GPL v2
 # $Id$
 
+  20 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
+  files/catalyst.conf, modules/catalyst/target/generic_stage.py:
+  Remove metadata_overlay option, since it doesn't make sense with
+  >=portage-2.1.6
+
   19 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
   modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
